# qrmenu-mobile

./: .gitignore  README.md  pyproject.toml
src/: main.py  state.py
src/pages/: dashboard.py  forgot_password.py  login.py  menu.py  orders.py  register.py
src/services/: auth.py  menu.py  order.py  qr_scanner.py
src/utils/: validators.py
src/view/: app_bottom_bar.py  sidebar.py
