[project]
name = "qrmenu-mobile"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet>=0.85.0",
    "httpx>=0.25.0",
    "flet-camera>=0.85.3",
    "pyzbar==0.1.9",
    "pillow>=10.0.0"
]

[dependency-groups]
dev = [
    "flet-cli>=0.85.0",
    "flet-desktop>=0.85.0",
    "flet-web>=0.85.0",
]

[tool.flet]
org = "com.mycompany"
product = "qrmenu-mobile"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"

[tool.flet.android.permission]
"android.permission.CAMERA" = true

[tool.flet.android.feature]
"android.hardware.camera" = true
"android.hardware.camera.required" = false
